# ChangeLog for media-plugins/live
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.126 2010/01/06 16:55:17 ranger Exp $

  12 May 2011; Nathan Phillip Brink <binki@gentoo.org>
  -files/live-2009.06.02-as-needed.patch,
  -files/live-2009.06.02-buildorder.patch,
  files/live-2009.06.02-libdeps.patch,
  files/live-2009.09.28-buildorder.patch, -live-2011.01.24.ebuild,
  +live-2011.03.14.ebuild:
  Bump to live-2011-03-14. Rework the ebuild to look more like gentoo-x86's.
  Fixes ohnopub bug 22.

  24 Mar 2011; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
  -live-2009.06.02.ebuild, live-2011.01.24.ebuild, files/config.gentoo,
  +files/config.gentoo-so-r1:
  Match live ebuild up more closely with the gentoo-x86-cvs version. Drop
  live-2009.06.02. Fix building live without live being previously installed
  (was trying to link against previously-installed live libraries).

  23 Feb 2011; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
  live-2009.06.02.ebuild, live-2011.01.24.ebuild:
  Fix missing dependencies on sys-devel/libtool which caused novae a
  compilation error.

  23 Feb 2011; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
  -live-2009.09.28.ebuild, -live-2009.11.12.ebuild, -live-2010.04.09.ebuild:
  Drop intermediate live versions (2009.09.28, 2009.11.12, 2010.04.09) for
  which tarballs are not available anymore.

  23 Feb 2011; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
  +live-2011.01.24.ebuild:
  Bump patched ebuild to live-2011.01.24.

  27 Sep 2010; <binki@gentoo.org> live-2010.04.09.ebuild:
  Add support for gentoo-prefix to my portage-mutilib hack to
  live-2010.04.09.

  20 Aug 2010; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> +live-2010.04.09.ebuild:
  Bumped to live-2010.04.09, attempting to follow changes for the
  corresponding bump in portage. Need for bump reported by geos_one.
