@@ -7,23 +7,23 @@ AUX live-2009.06.02-libdeps.patch 2833 RMD160 80f07321bada4d5b4eef24543247f0dc2c
 AUX live-2009.09.28-buildorder.patch 1070 RMD160 c4481e744986254f0f435130479cc1bb7e1ca5b5 SHA1 a29327e0b07daa6ee73c469b994c7982f38c628b SHA256 0c143995cbba68bffd1d7720943500320e59894e587bf951611db9992380e07f
 AUX live-recursive.patch 433 RMD160 f70734114f7423f48693f71c5b0f0ae85c337090 SHA1 87526904f6e69696f6fbf41a2313f1a43c51871a SHA256 6347a54046cf02671666bf74a3dbb54ebb898adafe9670abecebe86e6d870288
 DIST live.2011.03.14.tar.gz 475136 RMD160 b535e6395eb94fdd5f4ab0355e0b2bb0cdce48a1 SHA1 f1c1242409fe0001ea7fce70b2ea37e0bad05dd5 SHA256 c6ce050a7f9f69901e6f7f81a6745c82d9419e3904a753b2d5db1139caaf6738
-EBUILD live-2011.03.14.ebuild 3820 RMD160 a08945da089a66a821d38c6cc9076728824bb9f7 SHA1 bc11e439c3e63a6d96189ecc447abbad437a3880 SHA256 97674dadd6539e277e770606909798b67b40d6530dcbecec1455ae6d9596d817
-MISC ChangeLog 18208 RMD160 9618db37d7aa3c68c1fc6b4ea885160cd8077fdf SHA1 fbcfa07d7f1655d15b9bfdb329ac195513581205 SHA256 988efeed26fd47ea52a9b7b960eaaa75521abed8a56ebc4d34550795e7591732
+EBUILD live-2011.03.14.ebuild 3605 RMD160 262187ca43b639b86946cfba7ed5e2830411ec6a SHA1 eed0bacd3c9444e0af5afd4d1edb149b22d5f990 SHA256 31f3ce6b37b2f79cba1abda4c752aecb19c39a73db84a81fdece11a744b3f7c0
+MISC ChangeLog 18364 RMD160 1fe7f388b08053225caad4da71682ea52a3d5fb5 SHA1 60fa73dab9e54356306b035b8093dd69ec1d2619 SHA256 f6fcd9a44e18a9e8e3c97cf6eb1fb527c6732a409593ae72aa7dc7ca59d1084c
 MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iQIcBAEBCAAGBQJNzEL9AAoJEHQ6UuhrqBBQrMkP/jNj9N0G8WWV6a7i9s8kAlk6
-VYbba3U6ljJFw71G+Z81BN+F6jXVpKkBHesfTFRYASfrK6a/++Q5yIr6iHbZg998
-bhCLiP89TUewvOW2ardXb1BiQQ+JLEkHMwDKL9qO5/wohqydMGISbTNn9l195yuS
-28iyUAxRIOt8pUKU3ugKhWVUndY0gPFIRsroxcU95sq62cZ9EnnnVfBFbijLdiEK
-/Q6MbcwgzJbw9jzbVBiMqDJGITRfQvulvdHxKD2I+2342I+6kE/jqQhMVvsVyhgg
-OSdirbVFo/lwECBmNi9bTwrmLTTRg2ubEdUnY2Mmd8VCpErTG6TIp5+VhDSYT5Zz
-6t/W/tfLUjTvbgE0tNk1KW9yU/dvJVgCjGF5RHzP5jFnhuWTLDSPRgbR1Nj6mMvO
-9g+5uUU8swbbqVvTmzpmaQNkUZtjNALFAeFd013ZvQCg7PNedcXwIWehm5EJcVgu
-ZWAPTMX37JOA880E0WXELYqePjY8a+xSYFUe+6xwrKSKgm3urXCkHln7UD2zJX3j
-WKLwjhfMSqIbeBMpDjTklEzWN6ToAOzQSqbjLOk4dPEjdxuT2RHw1ZrBB/PycbnO
-xC2PGT/h0LTM8H/rGKk7/IbiutqDTcY+UlQH0jH56cngy5nqCmojy64CG07LqoWy
-y+nUz8AHvnLDSiJSN6nL
-=75pT
+iQIcBAEBCAAGBQJNzGKDAAoJEHQ6UuhrqBBQp+kQAKHBIF71iSsn+SBtJNWK0Zc5
+tImuV6C8pyKHRn/davmqDjWQQgQ0U1SfEFzRPnDWRr6xTNbTX7tYKB+vwc4zrUNr
++cdg63ug5795jFmUqtpOrwcsvxWzlIJIdEir8SX0c2ljuBwjJ1OGdm/JfKY8VHZJ
+XiOVKmMlbXP0DsWd7/jk2fTr8v+4Xxu7fO34KH8G2oWaMSD2dCqWMKoic1yYgFZQ
+z0dN9oHDNRcsF219E9Xn2/wrJfiYY/4t5E7ohyxXYF4sLRYcvqG+Ocahkgwj6mCA
+CHppjlDwHsK/07X60wfMedwtKAg5qPpmsCauvqLyDLJ9I7EBs/67CWQvU/5RRvAA
+74uGRiwrzKKYjCV2IcJOHs1sNjhWhlL/SuQ2uJiSIG48WxcUE0ppXpOplwvwvIii
+JnSF+dhMxkUws/imgwzc1olKLFOhARw6vfvPzV6bIMGAn3D9UPDOxOdciBfzkU88
+x+nm77z1YCoMLQ/z5Jgd7bLdDg5M6SR3THv964ge3jnW/7qEjys1ENbJvmr2ofAu
+5+TYlxekSVaae4IZpSBOYglu3YxA9zlmUaHbiK5uflhb2lKwlA4qDARLqZcZ0vxo
+CplPWR9B8Kl7F7a3c9oaJ22D9qHFMzBn0ye+neDzgVCf05cJb7QV0v0nqNPTKJHV
+ajFWNUn1vSGbwl94xqwM
+=iWE2
 -----END PGP SIGNATURE-----
